--- a/app/src/main/res/layout/fragment_finance.xml
+++ b/app/src/main/res/layout/fragment_finance.xml
@@ -23,12 +23,12 @@
 
             >
 
-<!--            <ImageButton-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_gravity="center"-->
-<!--                android:background="@color/tran"-->
-<!--                android:src="@drawable/ic_back_2" />-->
+            <!--            <ImageButton-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_gravity="center"-->
+            <!--                android:background="@color/tran"-->
+            <!--                android:src="@drawable/ic_back_2" />-->
 
 
             <TextView
@@ -99,9 +99,9 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="5dp"
+                                android:fontFamily="@font/helvetica_regular"
                                 android:text="Total Balance"
                                 android:textColor="@color/light_black_2"
-                                android:fontFamily="@font/helvetica_regular"
                                 android:textSize="12sp" />
 
 
@@ -111,11 +111,11 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
                             android:fontFamily="@font/pompiere"
                             android:text="Rs 12000"
                             android:textColor="@color/green"
-                            android:textSize="22sp"
-                            android:layout_marginTop="5dp"/>
+                            android:textSize="22sp" />
 
 
                     </LinearLayout>
@@ -152,9 +152,9 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="5dp"
+                                android:fontFamily="@font/helvetica_regular"
                                 android:text="Total Expense"
                                 android:textColor="@color/light_black_2"
-                                android:fontFamily="@font/helvetica_regular"
                                 android:textSize="12sp" />
 
 
@@ -164,9 +164,9 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
                             android:fontFamily="@font/pompiere"
                             android:text="Rs 4000"
-                            android:layout_marginTop="5dp"
                             android:textColor="@color/red"
                             android:textSize="22sp" />
 
@@ -180,18 +180,16 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
-                    >
+                    android:layout_marginTop="15dp">
 
 
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="30dp"
+                        android:layout_margin="5dp"
                         android:backgroundTint="@color/green"
                         app:cardCornerRadius="15dp"
-                        app:cardElevation="8dp"
-                        android:layout_margin="5dp"
-                        >
+                        app:cardElevation="8dp">
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -210,10 +208,10 @@
                         android:layout_width="120dp"
                         android:layout_height="30dp"
                         android:layout_alignParentEnd="true"
-                        app:cardElevation="8dp"
+                        android:layout_margin="5dp"
                         android:backgroundTint="@color/white"
                         app:cardCornerRadius="15dp"
-                        android:layout_margin="5dp">
+                        app:cardElevation="8dp">
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -312,21 +310,21 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical"
                 android:orientation="horizontal"
                 android:padding="7.5dp">
 
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/btn_daily"
-                    android:layout_width="70dp"
+                    android:layout_width="match_parent"
                     android:layout_height="40dp"
-                    app:cardCornerRadius="20dp"
-                   android:layout_margin="5dp"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
                     android:background="@drawable/rounded_white"
+                    app:cardCornerRadius="20dp"
 
 
-                  >
+                    >
 
                     <TextView
                         android:id="@+id/txt_daily"
@@ -339,79 +337,81 @@
                         android:textSize="14sp" />
 
 
-
                 </androidx.cardview.widget.CardView>
+
                 <androidx.cardview.widget.CardView
                     android:id="@+id/btn_weekly"
-                    android:layout_width="70dp"
+                    android:layout_width="match_parent"
                     android:layout_height="40dp"
-                   android:layout_margin="5dp"
-                    app:cardCornerRadius="20dp"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
                     android:background="@drawable/rounded_white"
+                    app:cardCornerRadius="20dp"
 
 
                     >
+
                     <TextView
                         android:id="@+id/txt_weekly"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:text="Weekly"
-                        android:gravity="center"
                         android:fontFamily="@font/helvetica_regular"
+                        android:gravity="center"
+                        android:text="Weekly"
                         android:textColor="@color/black"
-                        android:textSize="14sp"/>
-
+                        android:textSize="14sp" />
 
 
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/btn_monthly"
-                    android:layout_width="70dp"
+                    android:layout_width="match_parent"
                     android:layout_height="40dp"
-                   android:layout_margin="5dp"
-                    app:cardCornerRadius="20dp"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
                     android:background="@drawable/rounded_white"
+                    app:cardCornerRadius="20dp"
 
 
                     >
+
                     <TextView
                         android:id="@+id/txt_monthly"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:text="Monthly"
-                        android:gravity="center"
-                        android:textColor="@color/black"
                         android:fontFamily="@font/helvetica_regular"
-                        android:textSize="14sp"/>
-
+                        android:gravity="center"
+                        android:text="Monthly"
+                        android:textColor="@color/black"
+                        android:textSize="14sp" />
 
 
                 </androidx.cardview.widget.CardView>
+
                 <androidx.cardview.widget.CardView
                     android:id="@+id/btn_year"
-                    android:layout_width="70dp"
+                    android:layout_width="match_parent"
                     android:layout_height="40dp"
-                 android:layout_margin="5dp"
-                    app:cardCornerRadius="20dp"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
                     android:background="@drawable/rounded_white"
+                    app:cardCornerRadius="20dp"
 
                     >
+
                     <TextView
                         android:id="@+id/txt_year"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:text="Year"
-                        android:gravity="center"
                         android:fontFamily="@font/helvetica_regular"
+                        android:gravity="center"
+                        android:text="Year"
                         android:textColor="@color/black"
-                        android:textSize="14sp"/>
-
+                        android:textSize="14sp" />
 
 
                 </androidx.cardview.widget.CardView>
-
-
 
 
             </LinearLayout>
@@ -423,6 +423,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:gravity="center_vertical"
             android:layout_marginHorizontal="10dp"
             android:layout_marginTop="15dp"
             android:orientation="horizontal">
@@ -439,68 +441,33 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/helvetica_regular"
                 android:text="Income"
-                android:textSize="14sp"
                 android:textColor="@color/txt_b_2"
-                android:fontFamily="@font/helvetica_regular"/>
+                android:textSize="14sp" />
 
 
             <View
                 android:id="@+id/radioExpenses"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/view_circle"
-                android:layout_marginStart="10dp"
                 android:backgroundTint="@android:color/holo_green_dark" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/helvetica_regular"
                 android:text="Expenses"
-                android:textSize="14sp"
                 android:textColor="@color/txt_b_2"
-                android:fontFamily="@font/helvetica_regular"/>
-
-
-            <!--            <RadioGroup-->
-<!--                android:id="@+id/radioGroup"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:orientation="horizontal">-->
-
-<!--                <RadioButton-->
-<!--                    android:id="@+id/radioIncome"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                 />-->
-<!--                <TextView-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:text="Income"-->
-<!--                    android:textSize="14sp"-->
-<!--                    android:textColor="@color/txt_b_2"-->
-<!--                    android:fontFamily="@font/helvetica_regular"/>-->
-
-
-<!--                <RadioButton-->
-<!--                    android:id="@+id/radioExpenses"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_marginStart="10dp"-->
-<!--                    android:fontFamily="@font/helvetica_regular"-->
-<!--                    android:text="Expenses"-->
-
-<!--                    android:textColor="@color/txt_b_2"-->
-<!--                    android:textSize="14sp" />-->
-<!--            </RadioGroup>-->
+                android:textSize="14sp" />
 
 
             <RelativeLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="10dp">
+                android:layout_height="wrap_content">
 
                 <ImageButton
                     android:id="@+id/imgbtn_calendar"
@@ -523,8 +490,7 @@
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:layout_marginHorizontal="10dp"
-            android:layout_marginTop="10dp"
-            />
+            android:layout_marginTop="10dp" />
 
 
     </LinearLayout>
