--- a/app/src/main/res/layout/activity_add_vehicle.xml
+++ b/app/src/main/res/layout/activity_add_vehicle.xml
@@ -5,25 +5,21 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.AddVehicleActivity"
-    android:background="@color/screen_white_2">
+    android:background="@color/screen_white_2"
+    tools:context=".Activity.AddVehicleActivity">
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="10dp"
+        android:orientation="vertical">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="10dp"
-            android:layout_marginTop="10dp"
-            >
-
-
-
+            android:layout_marginTop="10dp">
 
 
             <ImageButton
@@ -38,21 +34,20 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="50dp"
                 android:layout_height="30dp"
-                android:backgroundTint="@color/light_black_3"
-                app:cardCornerRadius="25dp"
                 android:layout_alignParentEnd="true"
-                >
+                android:backgroundTint="@color/light_black_3"
+                app:cardCornerRadius="25dp">
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:fontFamily="@font/helvetica_bold"
+                    android:gravity="center"
                     android:text="Assist"
                     android:textColor="@color/white2"
-                    android:textSize="11sp"
-                    android:fontFamily="@font/helvetica_bold"
-                    android:gravity="center"/>
+                    android:textSize="11sp" />
 
             </androidx.cardview.widget.CardView>
-
 
 
         </RelativeLayout>
@@ -61,181 +56,181 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_marginHorizontal="10dp"
-            android:layout_marginTop="20dp">
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal">
 
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="24sp"
+                android:fontFamily="@font/helvetica_bold"
                 android:text="Enter"
                 android:textColor="@color/light_black_3"
-                android:fontFamily="@font/helvetica_bold"/>
-
+                android:textSize="24sp" />
 
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="24sp"
+                android:layout_marginStart="10dp"
+                android:fontFamily="@font/helvetica_bold"
                 android:text="vehicle type"
                 android:textColor="@color/green"
-                android:fontFamily="@font/helvetica_bold"
-                android:layout_marginStart="10dp"/>
-
-
+                android:textSize="24sp" />
 
 
         </LinearLayout>
 
-<RelativeLayout
-    android:id="@+id/relative_selectvehicle"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="40dp"
-    android:layout_marginHorizontal="10dp">
+        <RelativeLayout
+            android:id="@+id/relative_selectvehicle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginTop="40dp">
 
 
+            <Spinner
+                android:id="@+id/spinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-    <Spinner
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/spinner"/>
 
-
-</RelativeLayout>
+        </RelativeLayout>
 
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1.5dp"
-            android:background="@color/green"
+            android:layout_marginHorizontal="10dp"
             android:layout_marginTop="10dp"
-            android:layout_marginHorizontal="10dp"/>
+            android:background="@color/green" />
 
 
         <TextView
             android:id="@+id/txt_selectVehicleName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="12sp"
-            android:text="Select vehicle name"
             android:layout_marginHorizontal="10dp"
+            android:text="Select vehicle name"
             android:textColor="@color/red"
-            android:visibility="gone"/>
+            android:textSize="12sp"
+            android:visibility="gone" />
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:layout_marginHorizontal="10dp">
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginTop="15dp">
 
-<!--            <EditText-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:hint="Fuel type"-->
-<!--                android:textColorHint="@color/black_50_2"-->
-<!--                android:inputType="text"-->
-<!--                android:singleLine="true"-->
-<!--                android:textSize="18sp"-->
-<!--                android:background="@null"/>-->
+            <!--            <EditText-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:hint="Fuel type"-->
+            <!--                android:textColorHint="@color/black_50_2"-->
+            <!--                android:inputType="text"-->
+            <!--                android:singleLine="true"-->
+            <!--                android:textSize="18sp"-->
+            <!--                android:background="@null"/>-->
 
-<!--            <ImageButton-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_gravity="center"-->
-<!--                android:background="@color/tran"-->
-<!--                android:layout_alignParentEnd="true"-->
-<!--                android:src="@drawable/chevron_down"/>-->
+            <!--            <ImageButton-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_gravity="center"-->
+            <!--                android:background="@color/tran"-->
+            <!--                android:layout_alignParentEnd="true"-->
+            <!--                android:src="@drawable/chevron_down"/>-->
 
             <Spinner
+                android:id="@+id/spinnerFueltype"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/spinnerFueltype"/>
+                android:layout_height="wrap_content" />
 
         </RelativeLayout>
+
         <View
             android:layout_width="match_parent"
             android:layout_height="1.5dp"
-            android:background="@color/green"
+            android:layout_marginHorizontal="10dp"
             android:layout_marginTop="10dp"
-            android:layout_marginHorizontal="10dp"/>
+            android:background="@color/green" />
 
         <TextView
             android:id="@+id/txt_selectFuelType"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="12sp"
-            android:text="Select fuel type"
             android:layout_marginHorizontal="10dp"
+            android:text="Select fuel type"
             android:textColor="@color/red"
-            android:visibility="gone"/>
+            android:textSize="12sp"
+            android:visibility="gone" />
+
         <EditText
             android:id="@+id/edt_carName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="10dp"
             android:layout_marginTop="15dp"
-            android:hint="Car name"
-            android:textColorHint="@color/black_50_2"
-            android:inputType="text"
-            android:textSize="18sp"
-            android:singleLine="true"
             android:background="@null"
-            android:layout_marginHorizontal="10dp"/>
+            android:hint="Car name"
+            android:inputType="text"
+            android:singleLine="true"
+            android:textColorHint="@color/black_50_2"
+            android:textSize="18sp" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1.5dp"
-            android:background="@color/green"
+            android:layout_marginHorizontal="10dp"
             android:layout_marginTop="10dp"
-            android:layout_marginHorizontal="10dp"/>
+            android:background="@color/green" />
 
         <TextView
             android:id="@+id/txt_carName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="12sp"
-            android:text="Enter car name"
             android:layout_marginHorizontal="10dp"
+            android:text="Enter car name"
             android:textColor="@color/red"
-            android:visibility="gone"/>
+            android:textSize="12sp"
+            android:visibility="gone" />
+
         <EditText
             android:id="@+id/edt_VehicleNumber"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="10dp"
             android:layout_marginTop="15dp"
+            android:background="@null"
             android:hint="Vehicle number"
-            android:textColorHint="@color/black_50_2"
             android:inputType="text"
             android:singleLine="true"
-            android:textSize="18sp"
-            android:layout_marginHorizontal="10dp"
-            android:background="@null"/>
+            android:textColorHint="@color/black_50_2"
+            android:textSize="18sp" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1.5dp"
-            android:background="@color/green"
+            android:layout_marginHorizontal="10dp"
             android:layout_marginTop="10dp"
-            android:layout_marginHorizontal="10dp"/>
+            android:background="@color/green" />
 
         <TextView
             android:id="@+id/txt_vehicleNumber"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="12sp"
-            android:text="Enter vehicle number"
             android:layout_marginHorizontal="10dp"
+            android:text="Enter vehicle number"
             android:textColor="@color/red"
-            android:visibility="gone"/>
+            android:textSize="12sp"
+            android:visibility="gone" />
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:layout_marginHorizontal="10dp"
             android:layout_marginTop="15dp"
-            android:layout_marginHorizontal="10dp">
+            android:orientation="horizontal">
 
 
             <EditText
@@ -243,21 +238,21 @@
                 android:id="@+id/edt_insurance"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
+                android:background="@null"
                 android:hint="Insurance"
-                android:textColorHint="@color/black_50_2"
                 android:inputType="text"
                 android:singleLine="true"
-                android:background="@null"/>
+                android:textColorHint="@color/black_50_2" />
 
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/card_true"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                app:cardBackgroundColor="@color/green"
-                app:cardCornerRadius="12dp"
                 android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true">
+                android:layout_centerVertical="true"
+                app:cardBackgroundColor="@color/green"
+                app:cardCornerRadius="12dp">
 
 
                 <ImageButton
@@ -265,89 +260,84 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:background="@color/tran"
-                    android:src="@drawable/write"/>
-
+                    android:src="@drawable/write" />
 
 
             </androidx.cardview.widget.CardView>
 
 
-
         </RelativeLayout>
-
-
 
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1.5dp"
-            android:background="@color/green"
+            android:layout_marginHorizontal="10dp"
             android:layout_marginTop="10dp"
-            android:layout_marginHorizontal="10dp"/>
+            android:background="@color/green" />
+
         <TextView
             android:id="@+id/txt_insurancePic"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="12sp"
+            android:layout_marginHorizontal="10dp"
             android:text="Enter insurance image"
             android:textColor="@color/red"
-            android:layout_marginHorizontal="10dp"
-            android:visibility="gone"/>
+            android:textSize="12sp"
+            android:visibility="gone" />
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
             android:layout_marginHorizontal="10dp"
-            >
+            android:layout_marginTop="15dp">
+
             <EditText
 
                 android:id="@+id/edt_certificate"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:background="@null"
                 android:hint="Certificate of registration"
-                android:textColorHint="@color/black_50_2"
                 android:inputType="text"
                 android:singleLine="true"
-                android:textSize="18sp"
-                android:background="@null"/>
+                android:textColorHint="@color/black_50_2"
+                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/txt_upload"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="upload"
-                android:textSize="12sp"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
+                android:fontFamily="@font/roboto_bold"
+                android:text="upload"
                 android:textColor="@color/green"
-                android:fontFamily="@font/roboto_bold"/>
-
+                android:textSize="12sp" />
 
 
         </RelativeLayout>
 
 
-
         <View
             android:layout_width="match_parent"
             android:layout_height="1.5dp"
-            android:background="@color/green"
+            android:layout_marginHorizontal="10dp"
             android:layout_marginTop="10dp"
-            android:layout_marginHorizontal="10dp"/>
+            android:background="@color/green" />
 
         <TextView
             android:id="@+id/txt_rc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="12sp"
-            android:text="Enter certificate of registration image"
             android:layout_marginHorizontal="10dp"
+            android:text="Enter certificate of registration image"
             android:textColor="@color/red"
-            android:visibility="gone"/>
+            android:textSize="12sp"
+            android:visibility="gone" />
 
     </LinearLayout>
-
 
 
     <com.google.android.material.button.MaterialButton
@@ -355,13 +345,12 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_alignParentBottom="true"
+        android:layout_marginHorizontal="10dp"
         android:layout_marginBottom="20dp"
         android:backgroundTint="@color/green"
-        android:text="Save"
-        app:cornerRadius="10dp"
-        android:textSize="16sp"
         android:fontFamily="@font/helvetica_bold"
-        android:layout_marginHorizontal="10dp"
-        />
+        android:text="Save"
+        android:textSize="16sp"
+        app:cornerRadius="10dp" />
 
 </RelativeLayout>
