--- a/app/src/main/res/layout/fragment_driver.xml
+++ b/app/src/main/res/layout/fragment_driver.xml
@@ -23,7 +23,8 @@
             android:hint="Search for driver/vehicle"
             android:background="@null"
             android:layout_marginTop="10dp"
-            android:paddingLeft="10dp"
+            android:layout_margin="10dp"
+            android:drawablePadding="10dp"
             android:layout_marginBottom="10dp"/>
     </androidx.cardview.widget.CardView>
 
